# ziphuff

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: compression.rs  freqs.rs  gui.rs  huffman.rs  main.rs
