[package]
name = "huffman-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6.3", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
rmp-serde = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
rfd = "0.10.0"